# turku-agent

./: .bzrignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  MANIFEST.in  Makefile  README  README.md  README.md.license  pyproject.toml  setup.cfg  setup.py  tox.ini  turku-agent-ping  turku-agent-ping.service  turku-agent-ping.timer  turku-agent-rsyncd-wrapper  turku-agent-rsyncd.conf  turku-agent-rsyncd.init-debian  turku-agent-rsyncd.service  turku-agent.cron  turku-ping  turku-stub-httpd  turku-update-config  turku-update-config.service  turku-update-config.timer  turku_agent_rsyncd.rc.d-freebsd
.github/workflows/: ci.yml  pre-commit.yml
tests/: test_utils.py
turku_agent/: ping.py  rsyncd_wrapper.py  update_config.py  utils.py
turku_agent/tests/: test_utils.py
