# SPDX-PackageName: turku-agent
# SPDX-PackageSupplier: Ryan Finnie <ryan@finnie.org>
# SPDX-PackageDownloadLocation: https://github.com/rfinnie/turku-agent
# SPDX-FileCopyrightText: © 2015 Canonical Ltd.
# SPDX-FileCopyrightText: © 2015 Ryan Finnie <ryan@finnie.org>
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "turku-agent"
authors = [
    {name = "Ryan Finnie", email = "ryan@finnie.org"},
]
description = "Turku backups - client agent"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "requests",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = [
    "turku_agent",
    "turku_agent.tests",
]

[project.scripts]
turku-agent-ping = "turku_agent.ping:main"
turku-update-config = "turku_agent.update_config:main"

[tool.black]
line-length = 132
