[metadata]
name = turku_agent
author = Ryan Finnie
description = Turku backups - client agent
url = https://github.com/rfinnie/turku-agent
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = turku_agent
install_requires = requests
python_requires = ~=3.4

[options.entry_points]
console_scripts =
    turku-agent-ping = turku_agent.ping:main
    turku-update-config = turku_agent.update_config:main
